--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21"
